[package]
name = "tiddly-saver-rs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
password-auth = "1.0.0"
rand = "0.8.5"
regex = "1.10.6"
rouille = "3.6.2"
sha2 = "0.10.8"
sqlite = "0.36.1"
